--- a/front/src/components/FlowItem.css
+++ b/front/src/components/FlowItem.css
@@ -5,9 +5,9 @@
     background-color: white;
     border-radius: 25%;
     box-shadow: 0 0 30px #808080B0;
-    overflow: hidden;
     cursor: pointer;
     transition: transform 140ms;
+    overflow: visible;
 }
 
 .FlowItem:hover {
@@ -15,17 +15,21 @@
 }
 
 .FlowItem img {
-
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down;
+    border-radius: 25%;
 }
 
 .FlowItem .floaty-text {
     position: absolute;
     bottom: 0;
-    color: white;
-    text-shadow: 0 0 3px black;
-    margin: 10px;
+    color: black;
+    transform: translateY(100%);
+    font-weight: bold;
 }
 
 .FlowItem .floaty-text .name {
     font-size: 130%;
+    color: black;
 }
