--- a/front/src/components/ui/Brand.css
+++ b/front/src/components/ui/Brand.css
@@ -8,9 +8,7 @@
     z-index: 1;
 }
 
-.Brand:before {
-    content: "floworm";
-    font-weight: bold;
-    font-size: 30px;
-    line-height: 40px;
+.Brand img {
+    height: 100%;
+    object-fit: scale-down;
 }
