made flow item styling better

--- a/front/src/components/FlowItem.css
+++ b/front/src/components/FlowItem.css
@@ -49,6 +49,7 @@
 .FlowItem .floaty-text .description {
     opacity: 0;
     pointer-events: none;
+    transition: opacity 150ms;
 }
 
 .FlowItem:hover .floaty-text .description {
