improved icons and styles

--- a/front/src/components/FlowMap.css
+++ b/front/src/components/FlowMap.css
@@ -11,3 +11,11 @@
     height: 5000px;
     position: relative;
 }
+
+.top-bar {
+    width: 92%;
+    margin-left: 4%;
+    margin-right: 4%;
+    position: absolute;
+
+}
