--- a/front/src/components/ui/SearchBar.css
+++ b/front/src/components/ui/SearchBar.css
@@ -22,13 +22,16 @@
 }
 
 .SearchBar input {
+    color: #282c34;
     border: none;
-    padding: 0;
     background-color: transparent;
     height: 100%;
-    font-size: 20px;
+    font-size: 18px;
     display: inline-block;
     top: 0;
+    flex: 1 1;
+    padding: 0 5px;
+    box-sizing: border-box;
 }
 
 .SearchBar input:focus {
