--- a/front/src/components/FlowItemConnection.scss
+++ b/front/src/components/FlowItemConnection.scss
@@ -1,18 +1,14 @@
 .FlowItemConnection {
-    & line {
-        width: 100%;
-        stroke: rgb(128, 205, 255);
-        stroke-width: 3px;
-    }
-    & path {
-        width: 100%;
-        stroke: rgb(128, 205, 255);
-        stroke-width: 3px;
-        fill: transparent;
-    }
+  & path {
+    width: 100%;
+    stroke: rgba(128, 205, 255,125);
+    stroke-width: 3px;
+    fill: transparent;
+
+  }
 }
 
 .FlowItemConnection {
-    position: absolute;
-    z-index: -1;
+  position: absolute;
+  z-index: -1;
 }
