--- a/front/src/components/FlowItem.css
+++ b/front/src/components/FlowItem.css
@@ -18,7 +18,7 @@
     width: 100%;
     height: 100%;
     object-fit: scale-down;
-    border-radius: 25%;
+    border-radius: 18%;
     user-drag: none;
     user-select: none;
     -moz-user-select: none;
@@ -51,4 +51,34 @@
 .FlowItem:hover .floaty-text .description {
     opacity: 1;
     pointer-events: unset;
+}
+
+.FlowItem .edit-button {
+    position: absolute;
+    text-align: right;
+    height:fit-content;
+    transform: translate(83px, -3px) scale(0);
+    box-shadow: 0 0 10px #80808080;
+    border-radius: 50%;
+    transition: transform 200ms;
+}
+
+.FlowItem:hover .edit-button {
+    transform: translate(83px, -3px) scale(1);
+}
+
+.FlowItem:hover .edit-button:hover {
+    transform: translate(83px, -3px) scale(1.1);
+}
+
+
+.FlowItem .edit-button::before {
+    content: "+";
+    font-weight: bold;
+    font-size: 140%;
+    padding: 0 7px;
+    border-radius: 50%;
+    background-color: #1ecfff;
+    color:white;
+    line-height: 12px;
 }
