--- a/front/src/components/Modal.scss
+++ b/front/src/components/Modal.scss
@@ -1,8 +1,11 @@
 .modal {
-  border-radius: 5px;
-  position: relative;
-  top: 10px;
-  bottom: 10px;
-  left: 300px;
-  right: 300px;
+  border-radius: 25px;
+  position: absolute;
+  top: 100px;
+  bottom: 100px;
+  left: 200px;
+  right: 200px;
+  background: white;
+  z-index: 10;
+  box-shadow: 0 0 300px grey;
 }
